k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aws-pricing-tool
  labels:
    name: aws-pricing-tool
